--- a/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
@@ -69,6 +69,7 @@
                         <mat-select
                             [(value)]="gradoSeleccionado"
                             (selectionChange)="cambiarGrado($event.value)"
+                            [disabled]="!unidadIdSeleccionada"
                         >
                             <mat-option
                                 *ngFor="let grado of gradosUnicos"
@@ -248,15 +249,21 @@
                                     @for (student of filteredStudents; track
                                     student) {
                                     <mat-option [value]="student">
-                                        {{ student.nombre }}
+                                        {{ student.nombre }} ({{ student.dni }})
                                     </mat-option>
                                     }
+                                    <mat-option> Crear Estudiante </mat-option>
                                 </mat-autocomplete>
                             </mat-form-field>
                         </div>
 
                         <div>
-                            <button mat-button [disabled]="selectedStudents.length == 0">Asignar</button>
+                            <button
+                                mat-button
+                                [disabled]="selectedStudents.length == 0"
+                            >
+                                Asignar
+                            </button>
                         </div>
                         } @case("register"){
                         <!-- Agregar componente de registro aqui -->
@@ -268,6 +275,7 @@
                                             [formGroup]="
                                                 formRegistrarEstudiante
                                             "
+                                            (ngSubmit)="registerStudent()"
                                             class="flex flex-col p-8 bg-card rounded-2xl shadow overflow-hidden"
                                         >
                                             <mat-form-field class="flex-auto">
@@ -364,13 +372,7 @@
                                             </mat-form-field>
                                             <div class="flex justify-end mt-4">
                                                 <button
-                                                    mat-raised-button
-                                                    color="warn"
-                                                    class="mr-2"
-                                                >
-                                                    Cancelar
-                                                </button>
-                                                <button
+                                                    type="submit"
                                                     mat-raised-button
                                                     color="primary"
                                                     [disabled]="
