--- a/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
@@ -39,7 +39,7 @@
                     <mat-form-field>
                         <mat-label>Unidad</mat-label>
                         <mat-select [(ngModel)]="selectedUnity">
-                            @for(unidad of unidades;track unidad){
+                            @for(unidad of unities;track unidad){
                             <mat-option [value]="unidad.Id">
                                 {{ unidad.Nombre }}
                             </mat-option>
@@ -65,7 +65,7 @@
                         <mat-label>Sección</mat-label>
                         <mat-select [disabled]="!selectedDegree" [(ngModel)]="selectedSection">
                             @for(aula of sections; track aula){
-                            <mat-option [value]="aula.AulaId">
+                            <mat-option [value]="aula.Id">
                                 {{ aula.Seccion }}
                             </mat-option>
                             }
