--- a/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
@@ -1,3 +1,4 @@
+<!-- #region Hola -->
 <div class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto" cdkScrollable>
     <div
         class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10 border-b bg-card dark:bg-transparent">
@@ -99,38 +100,33 @@
                     <div>
                         @switch(items){ @case("list"){
                         <div class="flex flex-col gap-4">
-                            <div class="flex gap-4">
-                                @if(isTestEnabled){
-                                <button mat-button>
-                                    Detener Prueba Psicológica
-                                </button>
-
-                                } @else {
-                                <button mat-button>
-                                    Iniciar Prueba Psicológica
-                                </button>
-                                }
-                            </div>
                             @if(true){ @if(classroomStudents.length > 0){
 
-                            <!-- Campo de entrada para la búsqueda -->
-                            <mat-form-field class="w-full mt-4 sm:mt-0 sm:mx-2" [subscriptSizing]="'dynamic'">
-                                <mat-icon matPrefix class="icon-size-5"
-                                    [svgIcon]="'heroicons_solid:magnifying-glass'"></mat-icon>
-                                <input type="text" matInput (input)="applyFilter(query.value)"
-                                    placeholder="Buscar estudiante" #query>
-                            </mat-form-field>
 
+
+                            <!-- Campo de entrada para la búsqueda -->
+                            <div
+                                class="flex flex-col md:flex-row justify-center items-center space-y-4 md:space-y-0 md:space-x-4">
+                                <mat-form-field class="w-full mt-4 md:mt-0 md:mx-2" [subscriptSizing]="'dynamic'">
+                                    <mat-icon matPrefix class="icon-size-5"
+                                        [svgIcon]="'heroicons_solid:magnifying-glass'"></mat-icon>
+                                    <input type="text" matInput (input)="applyFilter(query.value)"
+                                        placeholder="Buscar estudiante" #query>
+                                </mat-form-field>
+                                <button mat-button
+                                    [class]="getEstadoPruebaPsicologicaAula(estadoEvalucionPsicologicaAula).class">
+                                    {{ getEstadoPruebaPsicologicaAula(estadoEvalucionPsicologicaAula).text }}
+                                </button>
+                            </div>
                             <!-- Tabla de estudiantes -->
                             <!-- Detalles de los estudiantes -->
                             <div
                                 class="sm:col-span-6 flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
                                 <div class="text-lg font-medium tracking-tight leading-6 truncate">Detalles de los
                                     estudiantes</div>
-                                <div class="flex flex-col flex-auto mt-2 overflow-x-auto">
-                                    <table class="min-w-240 overflow-y-visible" mat-table
+                                <div class="flex flex-col flex-auto mt-2">
+                                    <table class="w-full overflow-y-visible" mat-table
                                         [dataSource]="filteredStudents && filteredStudents.length > 0 ? filteredStudents : classroomStudents">
-
 
                                         <!-- Nombre Completo -->
                                         <ng-container matColumnDef="NombreCompleto" sticky>
@@ -140,21 +136,24 @@
                                         </ng-container>
 
                                         <!-- DNI -->
-                                        <ng-container matColumnDef="DNI">
+                                        <ng-container matColumnDef="DNI" class="hidden md:table-cell">
                                             <th mat-header-cell *matHeaderCellDef>DNI</th>
-                                            <td mat-cell *matCellDef="let student">{{student.DNI}}</td>
+                                            <td mat-cell *matCellDef="let student">
+                                                <span class="font-medium text-right">{{student.DNI}}</span>
+                                            </td>
                                         </ng-container>
+
 
                                         <!-- Estado Estudiante -->
                                         <ng-container matColumnDef="EstadoEstudiante">
                                             <th mat-header-cell *matHeaderCellDef>Estado</th>
                                             <td mat-cell *matCellDef="let student">
-                                                <span class="flex items-center">
-                                                    <span class="w-2 h-2 rounded-full"
-                                                        [ngClass]="{'bg-red-500': student.EstadoEstudiante === 'F',
-                                                                    'bg-gray-500': student.EstadoEstudiante === 'N',
-                                                                    'bg-green-500': student.EstadoEstudiante === 'P'}"></span>
-                                                    <span class="ml-3 leading-4">
+                                                <span
+                                                    class="inline-flex items-center font-bold text-xs px-2.5 py-0.5 rounded-full tracking-wide uppercase"
+                                                    [ngClass]="{'bg-red-200 text-red-800 dark:bg-red-600 dark:text-red-50': student.EstadoEstudiante === 'F',
+                                                                'bg-gray-200 text-gray-800 dark:bg-gray-600 dark:text-gray-50': student.EstadoEstudiante === 'N',
+                                                                'bg-green-200 text-green-800 dark:bg-green-600 dark:text-green-50': student.EstadoEstudiante === 'P'}">
+                                                    <span class="leading-relaxed whitespace-nowrap">
                                                         {{student.EstadoEstudiante === 'F' ? 'Terminado' :
                                                         student.EstadoEstudiante === 'N' ? 'No iniciado' :
                                                         student.EstadoEstudiante === 'P' ? 'En proceso' : ''}}
@@ -164,10 +163,12 @@
                                         </ng-container>
 
                                         <!-- Opciones -->
-                                        <ng-container matColumnDef="Opciones">
+                                        <ng-container matColumnDef="Opciones" class="hidden sm:table-cell">
                                             <th mat-header-cell *matHeaderCellDef>Opciones</th>
                                             <td mat-cell *matCellDef="let student">
-                                                <button mat-button (click)="deleteStudent()">Eliminar</button>
+                                                <button mat-icon-button (click)="deleteStudent()">
+                                                    <mat-icon>delete</mat-icon>
+                                                </button>
                                             </td>
                                         </ng-container>
 
