--- a/angular.client/src/app/modules/admin/reports/classroom-report/reports.component.scss
+++ b/angular.client/src/app/modules/admin/reports/classroom-report/reports.component.scss
@@ -1,5 +1,5 @@
 table {
-    @apply w-full text-sm text-left text-gray-500 dark:text-gray-400;
+    @apply w-full text-sm text-left text-gray-500 dark:text-gray-400 bg-white;
 }
 thead {
     @apply text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
